headings: correct missing centre alignment

--- a/src/web-router/components/choose/choose.css
+++ b/src/web-router/components/choose/choose.css
@@ -13,6 +13,10 @@
     height: 75%;
   }
 
+  & .column-title {
+    text-align: center;
+  }
+
   & .routable {
     width: 90%;
 
